# Sentinel-Agent

./: .gitignore  AGENTS.md  AGENT_GAPS_DOCUMENTATION.md  CONTEXT.md  CRATES_AUDIT.md  Cargo.toml  Dockerfile  FIXED_ISSUES.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  PRD.md  README.md  REVIEW.md  RUST_MIGRATION_PLAN.md  SYSTEM_AUDIT_REPORT.md  package-lock.json  pyproject.toml  sentinel.example.toml  sentinel.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  devcontainer.secure.json  init-firewall.sh  post-start.sh  post_install.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  main-branch.yml  pr-checks.yml  release.yml
agent/: config.py  main.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  cost_estimation.py  hub_artifacts.py  llm_params.py  model_ids.py  model_switcher.py  prompt_caching.py  redact.py  session.py  session_uploader.py  telemetry.py  tools.py  usage_metrics.py
agent/observability/: instrumentation.py  provider.py
agent/prompts/: system_prompt.yaml  system_prompt_v2.yaml  system_prompt_v3.yaml
agent/sft/: tagger.py
agent/tools/: __init__.py  dataset_tools.py  docs_tools.py  edit_utils.py  papers_tool.py  research_tool.py
agent/utils/: particle_logo.py  reliability_checks.py  terminal_display.py
backend/: dependencies.py  kpis_scheduler.py  main.py  models.py  session_manager.py  start.sh  usage.py
backend/routes/: agent.py  auth.py
bazel/modules/: BUILD.bazel  powershell_windows_x86_64.bzl  wine_linux_x86_64.bzl
bazel/rules/: BUILD.bazel  wine_test.bzl
bazel/rules/testing/wine/: BUILD.bazel  Cargo.toml
bazel/rules/testing/wine/src/: lib.rs
configs/: cli_agent_config.json  frontend_agent_config.json
crates/sentinel-ai-core/: Cargo.toml
crates/sentinel-ai-core/src/: agents_md.rs  apply_patch.rs  compact.rs  lib.rs
crates/sentinel-ai-core/src/agent/: mod.rs  tests.rs  thread.rs
crates/sentinel-ai-core/tests/: registry.rs
crates/sentinel-ai-exec/: Cargo.toml
crates/sentinel-ai-exec/src/: cli.rs  client.rs  event_processor.rs  exec_events.rs  lib.rs  main.rs
crates/sentinel-ai-exec/tests/: event_processor.rs
crates/sentinel-ai-test-support/: Cargo.toml
crates/sentinel-ai-test-support/src/: lib.rs
crates/sentinel-ai-tui/: Cargo.toml
crates/sentinel-ai-tui/src/: app.rs  app_event.rs  app_event_sender.rs  app_server_session.rs  chatwidget.rs  lib.rs  local_model.rs  main.rs
crates/sentinel-ai-tui/tests/: chatwidget.rs
crates/sentinel-analytics/src/: crash.rs  pipeline.rs
crates/sentinel-app-server/: Cargo.toml
crates/sentinel-app-server/src/: handler.rs  server.rs
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: auth.rs  diagnostics.rs  display.rs  exec.rs  main.rs  plugin.rs  sandbox.rs  server.rs
crates/sentinel-cli/tests/: e2e_harness.rs
crates/sentinel-config/: Cargo.toml
crates/sentinel-config/src/: config.rs  error.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: agent.rs  budget.rs  context.rs  cost.rs  lib.rs  pipeline.rs  sanitize.rs  snapshot.rs  sub_agent.rs  sub_agent_tool.rs  thread.rs  thread_store.rs  uploader.rs
crates/sentinel-core/tests/: agent_benchmark.rs  agent_test.rs  session_persistence_test.rs
crates/sentinel-exec/: Cargo.toml
crates/sentinel-exec/src/: executor.rs  lib.rs  local.rs
crates/sentinel-headroom/src/: cache_aligner.rs  cache_optimizer.rs  compress.rs  config.rs  integration.rs  lib.rs
crates/sentinel-lsp/: Cargo.toml
crates/sentinel-lsp/src/: handlers.rs  lib.rs  server.rs  session.rs
crates/sentinel-mcp/: Cargo.toml
crates/sentinel-mcp/src/: client.rs  lib.rs  mcp_tool.rs  server.rs  transport.rs
crates/sentinel-plugin-system/: Cargo.toml
crates/sentinel-plugin-system/src/: host.rs  lib.rs  plugin.rs  registry.rs
crates/sentinel-protocol/: Cargo.toml
crates/sentinel-protocol/src/: completion.rs  error.rs  lib.rs  message.rs  tool.rs
crates/sentinel-provider/: Cargo.toml
crates/sentinel-provider-info/: Cargo.toml
crates/sentinel-provider-info/src/: builtin.rs  lib.rs  provider.rs
crates/sentinel-provider/src/: error.rs  lib.rs  openai.rs  provider.rs  router.rs
crates/sentinel-sandbox/: Cargo.toml
crates/sentinel-sandbox/src/: lib.rs  platform.rs  policy.rs
crates/sentinel-tools/: Cargo.toml
crates/sentinel-tools/src/: builtin.rs  lib.rs  registry.rs  tool.rs
crates/sentinel-tools/tests/: tools_test.rs
desktop/: index.html  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: GPU_ACCESS_AND_OPTIMIZATION.md  LOCAL_MODEL_SETUP.md  pipeline.md  providers.md
frontend/: CONTEXT.md  STATUS.md  package-lock.json  package.json  test-provider.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.tsx
frontend/src/components/: JobsUpgradeDialog.tsx  UsageMeter.tsx  chat-view.tsx  input-bar.tsx  model-picker.tsx  picker-esc.test.tsx  provider-picker.tsx  status-bar.tsx
frontend/src/events/: ipc-emitter.ts  mock-emitter.ts  real-emitter.test.ts  real-emitter.ts
frontend/src/hooks/: use-spinner.ts  useAgentChat.ts
scripts/: build_kpis.py  build_package.py  build_sft.py
sentinel_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
session/20260707_094654/: files.md  handoff.md  session_state.md  timeline.md
tests/dry_run/: dry_run_test.py  mock_observability.py
tests/unit/: test_agent_model_gating.py  test_auto_approval_policy.py  test_build_kpis.py  test_build_sft.py  test_cli_local_models.py  test_cli_new_clear.py  test_cli_rendering.py  test_compaction_loop_break.py  test_heartbeat.py  test_hub_artifacts.py  test_kpis_scheduler.py  test_llm_params.py  test_messaging.py  test_plan_normalization.py  test_redact.py  test_session_manager_persistence.py  test_session_reaper.py  test_session_resume.py  test_sft_tagger.py  test_usage.py
tools/argument-comment-lint/: BUILD.bazel  lint_aspect.bzl  list-bazel-targets.sh  run-prebuilt-linter.py  run.py
tools/argument-comment-lint/src/: lib.rs
(+28 files in other folders)
