[workspace]
resolver = "2"
members = [
    "crates/sentinel-protocol",
    "crates/sentinel-config",
    "crates/sentinel-provider-info",
    "crates/sentinel-provider",
    "crates/sentinel-core",
    "crates/sentinel-tools",
    "crates/sentinel-exec",
    "crates/sentinel-mcp",
    "crates/sentinel-sandbox",
    "crates/sentinel-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
glob = "0.3"
