[workspace]
resolver = "2"
members = [
    "crates/sentinel-protocol",
    "crates/sentinel-config",
    "crates/sentinel-provider-info",
    "crates/sentinel-provider",
    "crates/sentinel-core",
    "crates/sentinel-tools",
    "crates/sentinel-exec",
    "crates/sentinel-mcp",
    "crates/sentinel-cli",
    "crates/sentinel-app-server",
    "crates/sentinel-app-server-protocol",
    "crates/sentinel-app-server-client",
    "crates/sentinel-app-server-daemon",
    "crates/sentinel-app-server-transport",
    "crates/sentinel-analytics",
    "crates/sentinel-agent-identity",
    "crates/sentinel-agent-graph-store",
    "crates/sentinel-ai-core",
    "crates/sentinel-ai-exec",
    "crates/sentinel-ai-tui",
    "crates/sentinel-ai-test-support",
    "crates/sentinel-plugin-system",
    "crates/sentinel-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
glob = "0.3"
colored = "2"
async-trait = "0.1"
tokio-stream = "0.1"
jsonwebtoken = "9"
ed25519-dalek = "2"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
sha1 = "0.10"
regex = "1"
