# ---------------------------------------------------------------------------
# Sentinel AI — Custom Bazel rules
# ---------------------------------------------------------------------------

package(default_visibility = ["//visibility:public"])

exports_files(["wine_test.bzl"])

# The wine_test rule needs a transition allowlist
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "rules",
    srcs = [
        "wine_test.bzl",
        "//bazel/rules/testing/wine:sentinel_wine_test",
    ],
    visibility = ["//visibility:public"],
)
