[package]
name = "codex-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
tracing = { workspace = true }
