[package]
name = "codex-test-support"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Re‑use the mock client from codex‑exec for consistency.
codex-exec = { path = "../codex-exec" }
