[package]
name = "sentinel-ai-tui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
opentui-native = []

[dependencies]
colored = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
futures = "0.3"
# Use the exec crate for shared logic
sentinel-ai-exec = { path = "../sentinel-ai-exec" }
sentinel-app-server-client = { path = "../sentinel-app-server-client" }
sentinel-app-server = { path = "../sentinel-app-server" }
sentinel-config = { path = "../sentinel-config" }
sentinel-analytics = { path = "../sentinel-analytics" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-app-server-protocol = { path = "../sentinel-app-server-protocol" }
sentinel-headroom = { path = "../sentinel-headroom" }
reqwest = { workspace = true, features = ["blocking"] }
