[package]
name = "sentinel-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true

sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-core = { path = "../sentinel-core" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-provider = { path = "../sentinel-provider" }
sentinel-provider-info = { path = "../sentinel-provider-info" }
sentinel-config = { path = "../sentinel-config" }
sentinel-exec = { path = "../sentinel-exec" }
sentinel-mcp = { path = "../sentinel-mcp" }
sentinel-app-server-protocol = { path = "../sentinel-app-server-protocol" }
sentinel-app-server-transport = { path = "../sentinel-app-server-transport" }
sentinel-analytics = { path = "../sentinel-analytics" }
sentinel-agent-identity = { path = "../sentinel-agent-identity" }
sentinel-agent-graph-store = { path = "../sentinel-agent-graph-store" }

[features]
sqlite = ["sentinel-core/sqlite"]
