[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
futures = "0.3"
tracing.workspace = true
uuid.workspace = true
async-trait = "0.1"

sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-provider = { path = "../sentinel-provider" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-config = { path = "../sentinel-config" }
