[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
rusqlite = { workspace = true, optional = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio-stream = "0.1"
tokio.workspace = true
tokio-util = "0.7"
futures = "0.3"
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true

sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-provider = { path = "../sentinel-provider" }
sentinel-provider-info = { path = "../sentinel-provider-info" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-config = { path = "../sentinel-config" }
sentinel-plugin-system = { path = "../sentinel-plugin-system" }
regex.workspace = true

[features]
default = []
sqlite = ["rusqlite"]