[package]
name = "sentinel-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true

sentinel-core = { path = "../sentinel-core" }
sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-provider = { path = "../sentinel-provider" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-config = { path = "../sentinel-config" }
lsp-types = "0.97"
tower-lsp = "0.20"
