[package]
name = "sentinel-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-trait.workspace = true

sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-tools = { path = "../sentinel-tools" }
