[package]
name = "sentinel-tools"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
glob.workspace = true

sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-sandbox = { path = "../sentinel-sandbox" }
