[package]
name = "sentinel-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

sentinel-core = { path = "../../crates/sentinel-core" }
sentinel-provider = { path = "../../crates/sentinel-provider" }
sentinel-tools = { path = "../../crates/sentinel-tools" }
sentinel-config = { path = "../../crates/sentinel-config" }
