"""Bazel build rules for the argument-comment-lint Dylint plugin.

Provides:
  - `argument_comment_lint`     — the cdylib library (dylint plugin)
  - `argument_comment_lint_bin` — standalone driver binary
  - `argument_comment_lint_aspect` — Bazel aspect for linting Rust targets
  - `list_bazel_targets`        — shell script to enumerate lintable targets
"""

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

# ---------------------------------------------------------------------------
# Dylint plugin — compiled as a dynamic library
# ---------------------------------------------------------------------------
rust_library(
    name = "argument_comment_lint",
    srcs = glob(["src/**/*.rs"], exclude = ["src/bin/**"]),
    edition = "2021",
    crate_type = "cdylib",
    deps = [
        "@sentinel_crates//:dylint_linting",
        "@sentinel_crates//:serde",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:clap",
        "@sentinel_crates//:anyhow",
        "@rust_toolchains//:rustc_ast",
        "@rust_toolchains//:rustc_driver",
        "@rust_toolchains//:rustc_errors",
        "@rust_toolchains//:rustc_hir",
        "@rust_toolchains//:rustc_interface",
        "@rust_toolchains//:rustc_lint",
        "@rust_toolchains//:rustc_middle",
        "@rust_toolchains//:rustc_session",
        "@rust_toolchains//:rustc_span",
    ],
    visibility = ["//visibility:public"],
)

# ---------------------------------------------------------------------------
# Driver binary — wraps cargo-dylint with env setup and toolchain normalisation
# ---------------------------------------------------------------------------
rust_binary(
    name = "argument_comment_lint_bin",
    srcs = ["src/bin/argument-comment-lint.rs"],
    edition = "2021",
    deps = [
        "@sentinel_crates//:clap",
        "@sentinel_crates//:anyhow",
    ],
    visibility = ["//visibility:public"],
)

# ---------------------------------------------------------------------------
# Pre-built library archive (for CI / distribution)
# ---------------------------------------------------------------------------
filegroup(
    name = "prebuilt_library",
    srcs = select({
        "@platforms//os:linux":   [":argument_comment_lint.so"],
        "@platforms//os:macos":   [":argument_comment_lint.dylib"],
        "@platforms//os:windows": [":argument_comment_lint.dll"],
    }),
    visibility = ["//visibility:public"],
)

# ---------------------------------------------------------------------------
# Lint configuration
# ---------------------------------------------------------------------------
exports_files([
    "lint_config.json",
    "run.py",
    "run-prebuilt-linter.py",
    "lint_aspect.bzl",
])
