load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "sentinel_wine_test",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@sentinel_crates//:serde",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:thiserror",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "sentinel_wine_test_test",
    crate = ":sentinel_wine_test",
)
